<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="addition">\u002B</string>
    <string name="subtraction">\u2212</string>
    <string name="open_bracket">\u0028</string>
    <string name="close_bracket">\u0029</string>
    <string name="multiplication">\u00D7</string>
    <string name="division">\u00F7</string>
    <string name="equals">\u003D</string>
    <string name="decimal_point">.</string>
    <string name="back_space">BackSpace</string>
    <string name="developed_By">Developed by @ali\u0020</string>
    <string name="percentage">\u0025</string>
    <string name="all_clear">AC</string>
    <string name="square_root">\u221A</string>
    <string name="squared">x\u00B2</string>
    <string name="clear">C</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="factorial">x!</string>
    <string name="pi">\u03C0</string>
</resources>